# backend_tesis

./: .gitignore  README.md  blacklist.json  config.py  list.py  main.py  model.py  pyproject.toml  requirements.txt
models/: __init__.py  schemas.py
services/: __init__.py  blacklist.py  model_service.py  validation_service.py
utils/: helpers.py  image_utils.py  model.py
