[project]
name = "backend-tesis"
version = "0.1.0"
description = "Backend for acne severity classification using deep learning inference with ONNX Runtime for validation and PyTorch"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "facenet-pytorch==2.6.0",
    "fastapi==0.124.2",
    "mediapipe==0.10.31",
    "numpy==1.26.4",
    "onnxruntime>=1.25.1",
    "python-multipart==0.0.20",
    "scalar-fastapi==1.5.0",
    "torch>=2.2.0",
    "torchvision>=0.17.2",
    "uvicorn==0.38.0",
]

[tool.uv]
link-mode = "copy"